dev/tests/cases/neg/17_apply_missing.tv
apply no_such_module_xyz;

df main() -> void {
    echo!("x");
}
